--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" >
 	<meta name="viewport" content="width=device-width, initial-scare=1.0">    
-	<title>The Wikipedia Viewer</title>
+	<title>Second Wiki!</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<header>
-		<h1>The Search Engine!</h1>
+		<h1>Second Wiki!</h1>
 		<h3>Based on Wikipedia</h3>
 	</header>
 	<main>
