adding final layout files and js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				Please use the input below for search or click the lucky button to read about a random topic
 			</h3>
 
-			<input type="text" class="content-section__first--input" name="query-input" id="input" required>
+			<input type="text" class="content-section__first--input" name="query-input" id="input" placeholder="Enter Your Query..." required>
 			
 			<div class="content-section__first--btns-container">
 				<button class="btn btn--submit" type="submit" id="btn-search">Search!</button>
