compiling js to es5 and sass to css

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 			</div>
 		</footer>
 	</section>
-	<script rel="text/javascript" src="src/js/main.js"></script>
+	<script rel="text/javascript" src="dist/js/main.js"></script>
 </body>
 </html>
