--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">   
 	<title>The Red's Wiki</title>
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:400,600,700,800" rel="stylesheet">
-	<link rel="stylesheet" href="dist/css/main.comp.css">
+	<link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body onload=init()>
 	<section class="container content-section">
